# odl-neutron-drivers

./: .gitignore  .pylintrc  AUTHORS  ChangeLog  MANIFEST.in  README.rst  Vagrantfile  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/neutron/plugins/opendaylight/: odl_rest.ini
odldrivers/common/: auth.py  client.py  config.py  utils.py
odldrivers/fwaas/: driver.py
odldrivers/l3/: l3_odl.py
odldrivers/lbaas/: driver.py
odldrivers/ml2/: README.odl  README.rst  auth.py  client.py  config.py  exceptions.py  mech_driver.py
odldrivers/tests/unit/: test_mechanism_odl.py
puppet/hieradata/: hosts.json
puppet/manifests/: base.pp  devstack-compute.pp  devstack-control.pp  mininet.pp
puppet/templates/: compute.local.conf.erb  control.local.conf.erb
