[metadata]
name = odl-neutron-drivers
summary = OpenDaylight Drivers for OpenStack Neutron
description-file = README.rst
author = OpenDaylight
author-email = dev@lists.opendaylight.org
home-page = http://www.opendaylight.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Eclipse Public License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    odldrivers
data_files =
    etc/neutron/plugins/ml2 = etc/neutron/plugins/opendaylight/odl_rest.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    opendaylight = odldrivers.ml2.mech_driver:OpenDaylightMechanismDriver


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
